# OS_mai

./: CMakeLists.txt  README.md
kp/: CMakeLists.txt  main.cpp
kp/doc/: kp.docx
kp/include/: utils.h
kp/src/: A.cpp  B.cpp  C.cpp  utils.cpp
lab1/doc/: lab1.docx
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: lab2.docx
lab2/include/: parent.h  utils.h
lab2/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: lab3.docx
lab3/include/: lab3.h
lab3/src/: lab3.cpp
lab4/: CMakeLists.txt
lab4/doc/: lab4.docx
lab4/include/: parent.h  utils.h
lab4/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab5/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp
lab5/doc/: lab5.docx
lab5/include/: utils.h
lab5/lib/: MathLibrary.cpp  MathUnit.h
lab5/src/: programm1.cpp  programm2.cpp
lab6/: CMakeLists.txt  structures.hpp
lab6/doc/: lab6.docx
lab6/include/: zmq_functions.h
lab6/src/: control.cpp  counting.cpp
lab_2 final/lab2/: CMakeLists.txt
lab_2 final/lab2/src/: child1.cpp
lab_2 final/tests/: lab1_test.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab5_test.cpp
